--- a/menu/styles/css/main.css
+++ b/menu/styles/css/main.css
@@ -1,33 +1,13 @@
-.container{
-	display: flex;
-	padding-top: 100px;
-	flex-wrap: wrap;
+@font-face {
+    font-family: 'latoregular';
+    src: url('../fonts/fonts-packs/lato-regular/lato-regular-webfont.eot');
+    src: url('../fonts/fonts-packs/lato-regular/lato-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/fonts-packs/lato-regular/lato-regular-webfont.woff') format('woff'),
+         url('../fonts/fonts-packs/lato-regular/lato-regular-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 
-.menu{
-	margin: 0 auto;
-	display: flex;
-	justify-content: space-around;
-	width: 500px;
-}
-.menu__item{
-	flex: 1 1 0;
-	background-color: #eee;
-	text-align: center;
-	padding: 20px;
-	cursor: pointer;
-	color: #7B8585;
-}
-.menu__item:hover{
-	background-color: #beecea !important;
-}
-.menu__item_active:hover{
-	background-color: #41c7c2 !important;
-}
-.status{
-	display: flex;
-}
-.status p{
-	margin: 0 auto;
-	padding-top: 20px;
+body {
+		font-family: 'latoregular';
 }
