--- a/menu/styles/fonts/fonts.css
+++ b/menu/styles/fonts/fonts.css
@@ -9,3 +9,13 @@
     font-weight: normal;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'roboto_slabregular';
+    src: url('roboto-slab/robotoslab-regular-webfont.eot');
+    src: url('roboto-slab/robotoslab-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('roboto-slab/robotoslab-regular-webfont.woff') format('woff'),
+         url('roboto-slab/robotoslab-regular-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
