--- a/menu/styles/css/main.css
+++ b/menu/styles/css/main.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
     font-family: 'latoregular';
     src: url('../fonts/fonts-packs/lato-regular/lato-regular-webfont.eot');
     src: url('../fonts/fonts-packs/lato-regular/lato-regular-webfont.eot?#iefix') format('embedded-opentype'),
@@ -20,15 +20,15 @@
 
 @font-face {
     font-family: 'latoblack';
-    src: url('../fonts/fonts-packs/lato-black/lato-black-webfont.eot');
-    src: url('../fonts/fonts-packs/lato-black/lato-black-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/fonts-packs/lato-black/lato-black-webfont.woff') format('woff'),
+    src: url('./fonts/fonts-packs/lato-black/lato-black-webfont.eot');
+    src: url('./fonts/fonts-packs/lato-black/lato-black-webfont.eot?#iefix') format('embedded-opentype'),
+         url('./fonts/fonts-packs/lato-black/lato-black-webfont.woff') format('woff'),
          url('../fonts/fonts-packs/lato-black/lato-black-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 
-}
+} */
 
 body {
-		font-family: 'latoregular';
+		/* font-family: 'latoregular'; */
 }
