--- a/menu/styles/css/main.css
+++ b/menu/styles/css/main.css
@@ -1,4 +1,4 @@
-/* @font-face {
+@font-face {
     font-family: 'latoregular';
     src: url('../fonts/fonts-packs/lato-regular/lato-regular-webfont.eot');
     src: url('../fonts/fonts-packs/lato-regular/lato-regular-webfont.eot?#iefix') format('embedded-opentype'),
@@ -27,8 +27,8 @@
     font-weight: normal;
     font-style: normal;
 
-} */
+}
 
 body {
-		/* font-family: 'latoregular'; */
+		font-family: 'latoregular';
 }
