fix: refactoring project, <Pager /> complete

--- a/menu/styles/css/main.css
+++ b/menu/styles/css/main.css
@@ -20,9 +20,9 @@
 
 @font-face {
     font-family: 'latoblack';
-    src: url('./fonts/fonts-packs/lato-black/lato-black-webfont.eot');
-    src: url('./fonts/fonts-packs/lato-black/lato-black-webfont.eot?#iefix') format('embedded-opentype'),
-         url('./fonts/fonts-packs/lato-black/lato-black-webfont.woff') format('woff'),
+    src: url('../fonts/fonts-packs/lato-black/lato-black-webfont.eot');
+    src: url('../fonts/fonts-packs/lato-black/lato-black-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/fonts-packs/lato-black/lato-black-webfont.woff') format('woff'),
          url('../fonts/fonts-packs/lato-black/lato-black-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
@@ -30,7 +30,7 @@
 }
 
 body {
-		font-family: 'latoregular';
+    font-family: 'latoregular';
 }
 
 .active {
