--- a/menu/styles/fonts/fonts.css
+++ b/menu/styles/fonts/fonts.css
@@ -2,30 +2,30 @@
 
 @font-face {
     font-family: 'latoregular';
-    src: url('lato-regular/lato-regular-webfont.eot');
-    src: url('lato-regular/lato-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('lato-regular/lato-regular-webfont.woff') format('woff'),
-         url('lato-regular/lato-regular-webfont.ttf') format('truetype');
+    src: url('./fonts-pack/lato-regular/lato-regular-webfont.eot');
+    src: url('./fonts-pack/lato-regular/lato-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('./fonts-pack/lato-regular/lato-regular-webfont.woff') format('woff'),
+         url('./fonts-pack/lato-regular/lato-regular-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'roboto_slabregular';
-    src: url('roboto-slab/robotoslab-regular-webfont.eot');
-    src: url('roboto-slab/robotoslab-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('roboto-slab/robotoslab-regular-webfont.woff') format('woff'),
-         url('roboto-slab/robotoslab-regular-webfont.ttf') format('truetype');
+    src: url('./fonts-pack/roboto-slab/robotoslab-regular-webfont.eot');
+    src: url('./fonts-pack/roboto-slab/robotoslab-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('./fonts-pack/roboto-slab/robotoslab-regular-webfont.woff') format('woff'),
+         url('./fonts-pack/roboto-slab/robotoslab-regular-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'latoblack';
-    src: url('lato-black/lato-black-webfont.eot');
-    src: url('lato-black/lato-black-webfont.eot?#iefix') format('embedded-opentype'),
-         url('lato-black/lato-black-webfont.woff') format('woff'),
-         url('lato-black/lato-black-webfont.ttf') format('truetype');
+    src: url('./fonts-pack/lato-black/lato-black-webfont.eot');
+    src: url('./fonts-pack/lato-black/lato-black-webfont.eot?#iefix') format('embedded-opentype'),
+         url('./fonts-pack/lato-black/lato-black-webfont.woff') format('woff'),
+         url('./fonts-pack/lato-black/lato-black-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 
